[package]
name = "html-entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
serde = { version = "1.0.158", default-features = false, features = ["derive"] }
serde_json = "1.0.91"
